2005-07-21  Roman Kennke  <roman@kennke.org>

	* javax/swing/JComponent.java
	(putClientProperty): If value == null, remove the key from the
	Hashtable, otherwise we would get an NPE here.

2005-07-21  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicSliderUI.java:
	(thumbHeight): removed,
	(thumbWidth): removed,
	(tickHeight): removed,
	(installDefaults): deleted initialisation of thumbHeight, thumbWidth 
	and thumbRect,
	(getPreferredHorizontalSize): changed source of thumb height and width,
	(getPreferredVerticalSize): likewise,
	(getMinimumHorizontalSize): reimplemented,
	(getMinimumVerticalSize): reimplemented,
	(getMinimumSize): reimplemented, 
	(getMaximumSize): reimplemented,
	(calculateThumbSize): use getThumbSize(),
        (calculateThumbLocation): use trackRect not contentRect,
	(calculateTrackBuffer): use half the thumbRect,
	(getThumbSize): use constant size,
	(calculateTrackRect): move track down to middle of contentRect,
	(getTickLength): return constant,
	(paintTrack): removed unused local variables,
	(paintTicks): apply a translation to g temporarily before calling 
	methods to draw ticks, add 0.5 to solve rounding problem,
	(paintMinorTickForHorizSlider): modified to account for translation 
	already applied to g,
	(paintMajorTickForHorizSlider): likewise,
	(paintMinorTickForVertSlider): likewise,
	(paintMajorTickForVertSlider): likewise,
	(xPositionForValue): subtract 1 from width,
	(yPositionForValue): likewise,
	*javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): add slider defaults,
	*javax/swing/plaf/metal/MetalSliderUI.java: implemented missing 
	methods,
	* examples/gnu/classpath/examples/swing/Demo.java
	(mkSliders): added minor ticks and labels.

2005-07-21  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractButton.java
	(init): Only set icon if the supplied icon is not null. Otherwise
	we would override icons that are possibly set by the UI.