@@ -1,3 +1,9 @@
+2005-07-21  Lillian Angel  <langel@redhat.com>
+	* javax/swing/plaf/basic/BasicTreeUI.java
+	(getPreferredSize): Changed to depend on visible nodes.
+	(mouseClicked): Fixed to keep track of last cell clicked, so expand/collapse
+	works properly by clicking 2 times on the same cell.
+
 2005-07-21  Roman Kennke  <roman@kennke.org>
 
 	* javax/swing/JComponent.java
